# lazycurl

./: Cargo.toml  README.md
src/: main.rs
src/app/: mod.rs  position.rs
src/app/handler/: console_handler.rs  health_problem_handler.rs  mod.rs  requesting_handler.rs  status_handler.rs  util.rs  viewing_response_handler.rs
src/app/state/: console_state.rs  health.rs  mod.rs  request_area_state.rs  status_state.rs
src/event/: listener.rs  mod.rs  util.rs
src/event/client/: inner.rs  mod.rs
src/ui/: health_check.rs  lower_left.rs  mod.rs  upper_left.rs  upper_right.rs
src/ui/util/: mod.rs  str_to_lines.rs
