[package]
name = "lazycurl"
authors = ["onelone852"]
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.25.0"
reqwest = "0.11.23"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "time"] }
url = "2.5.0"
